--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.8.0"
+androidTestCore = "1.3.0"
 fragmentKtx = "1.8.5"
 junitJupiter = "5.9.2"
 kotlin = "2.0.21"
@@ -26,6 +27,8 @@ hiltPluginVersion = "2.51.1"
 kspVersion = "2.0.21-1.0.27"    #kotlin이랑 버전 꼭 맞추기
 
 [libraries]
+android-test-core = { module = "de.mannodermaus.junit5:android-test-core", version.ref = "androidTestCore" }
+android-test-runner = { module = "de.mannodermaus.junit5:android-test-runner", version.ref = "androidTestCore" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
