--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,11 @@
 [versions]
 agp = "8.8.0"
 androidTestCore = "1.3.0"
+androidxJunit = "1.1.5"
+appcompatVersion = "1.6.1"
 fragmentKtx = "1.8.5"
+hamcrestHamcrestLibrary = "2.2"
+hiltAndroidTesting = "2.51.1"
 junitJupiter = "5.9.2"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
@@ -18,6 +22,7 @@ jetbrainsKotlinJvm = "1.9.24"
 
 mockitoCore = "4.8.1"
 mockitoKotlin = "4.1.0"
+mockkAndroidVersion = "1.13.5"
 mockkVersion = "1.13.14"
 roomRuntime = "2.6.1"
 hiltAndroidVersion = "2.51.1"
@@ -26,14 +31,25 @@ datastorePreferences = "1.1.2"
 
 hiltPluginVersion = "2.51.1"
 kspVersion = "2.0.21-1.0.27"    #kotlin이랑 버전 꼭 맞추기
+rules = "1.6.1"
+runner = "1.6.2"
+junitKtx = "1.2.1"
 
 [libraries]
 android-test-core = { module = "de.mannodermaus.junit5:android-test-core", version.ref = "androidTestCore" }
 android-test-runner = { module = "de.mannodermaus.junit5:android-test-runner", version.ref = "androidTestCore" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
+androidx-appcompat-v161 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
+androidx-fragment-testing = { module = "androidx.fragment:fragment-testing", version.ref = "fragmentKtx" }
+androidx-junit-v115 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
+androidx-rules = { module = "androidx.test:rules", version.ref = "rules" }
+androidx-runner = { module = "androidx.test:runner", version.ref = "runner" }
+hamcrest-hamcrest-library = { module = "org.hamcrest:hamcrest-library", version.ref = "hamcrestHamcrestLibrary" }
+hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hiltAndroidTesting" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltAndroidTesting" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -58,12 +74,14 @@ hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", ve
 
 #retrofit
 mockk-mockk = { module = "io.mockk:mockk", version.ref = "mockkVersion" }
+mockk-mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkAndroidVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 
 #data store
 androidx-datastore-core = { module = "androidx.datastore:datastore-core", version.ref = "datastorePreferences" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
 
 [plugins]
